--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@formspree/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.3",
     "lottie-react": "^2.4.1",
+    "motion-react": "^0.15.0-alpha.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-motion": "^0.5.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
