--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.3",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "motion-react": "^0.15.0-alpha.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
